[tool.poetry]
name = "user-auth"
version = "0.1.0"
description = ""
authors = ["Jahan Asif"]
readme = "README.md"
packages = [{include = "user_auth"}]

[tool.poetry.dependencies]
python = "3.9.16"
fastapi = "^0.95.2"
sqlalchemy = "^2.0.15"
python-jose = "^3.3.0"
uvicorn = "^0.22.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"
auth0-python = "^4.2.0"
urllib3 = "1.26.6"
pydantic = {extras = ["email"], version = "^1.10.8"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
